--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -4,7 +4,7 @@
 
 
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
-github: [yashbhutwala] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
+github: [SLHolmess] # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 issuehunt: # Replace with a single IssueHunt username
 ko_fi: # Replace with a single Ko-fi username
 liberapay: # Replace with a single Liberapay username
