--- a/deploy/krew/df-pv.yaml
+++ b/deploy/krew/df-pv.yaml
@@ -3,53 +3,19 @@ kind: Plugin
 metadata:
   name: df-pv
 spec:
-  version: {{ .TagName }}
+  version: v0.1
   platforms:
   - selector:
       matchLabels:
         os: linux
         arch: amd64
-    {{addURIAndSha "https://github.com/yashbhutwala/kubectl-df-pv/releases/download/{{ .TagName }}/kubectl-df-pv_{{ .TagName }}_linux_amd64.tar.gz" .TagName }}
+    # {{addURIAndSha "https://github.com/yashbhutwala/kubectl-df-pv/releases/download/{{ .TagName }}/kubectl-df-pv_{{ .TagName }}_linux_amd64.tar.gz" .TagName }}
+    uri: https://github.com/SLHolmess/kubectl-df-pv/releases/download/v0.1/df-pv.tar.gz
     files:
     - from: "df-pv"
       to: "."
-    - from: "LICENSE"
-      to: "."
     bin: "df-pv"
-  - selector:
-      matchLabels:
-        os: darwin
-        arch: arm64
-    {{addURIAndSha "https://github.com/yashbhutwala/kubectl-df-pv/releases/download/{{ .TagName }}/kubectl-df-pv_{{ .TagName }}_darwin_arm64.tar.gz" .TagName }}
-    files:
-    - from: "df-pv"
-      to: "."
-    - from: "LICENSE"
-      to: "."
-    bin: "df-pv"
-  - selector:
-      matchLabels:
-        os: darwin
-        arch: amd64
-    {{addURIAndSha "https://github.com/yashbhutwala/kubectl-df-pv/releases/download/{{ .TagName }}/kubectl-df-pv_{{ .TagName }}_darwin_amd64.tar.gz" .TagName }}
-    files:
-    - from: "df-pv"
-      to: "."
-    - from: "LICENSE"
-      to: "."
-    bin: "df-pv"
-  - selector:
-      matchLabels:
-        os: windows
-        arch: amd64
-    {{addURIAndSha "https://github.com/yashbhutwala/kubectl-df-pv/releases/download/{{ .TagName }}/kubectl-df-pv_{{ .TagName }}_windows_amd64.zip" .TagName }}
-    files:
-    - from: "df-pv.exe"
-      to: "."
-    - from: "LICENSE"
-      to: "."
-    bin: "df-pv.exe"
   shortDescription: Show disk usage (like unix df) for persistent volumes
-  homepage: https://github.com/yashbhutwala/kubectl-df-pv
+  homepage: https://github.com/SLHolmess/kubectl-df-pv
   description: |
     This plugin emulates Unix style df for persistent volumes.
